# karel_the_robot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controller/: karel_controller.cpp  karel_controller.h
karel/: karel.cpp  karel.h
model/karel/: karel.h
model/world/: world.cpp  world.h
view/: karel_view.h
wrold/: world.cpp  world.h
